[package]
name = "mcc_patch"
version = "0.1.1"
edition = "2018"
description = "MCLauncher APK patcher"
repository = "https://github.com/tuxuser/monsieurcc-patch"
license = "MIT"
homepage = "https://github.com/tuxuser/monsieurcc-patch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1"
glob = "0.3.0"
regex = "1"
